tdf#165839 Changes the transaction isolation level

Changes the transaction isolation level to allow modification of the
same table by multiple simultaneous connections

Change-Id: I5db7e55ffbe75e21c5eba56e168deb8e478eb282
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183180
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit ca109bc22f07774c776b4305d137c55f90ae0b98)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183327
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>